--- a/Presentation/ETicaret.API/ETicaret.API.csproj
+++ b/Presentation/ETicaret.API/ETicaret.API.csproj
@@ -17,7 +17,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\ETicaret.Application\ETicaret.Application.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\ETicaret.Infrastructure\ETicaret.Infrastructure.csproj" />
     <ProjectReference Include="..\..\Infrastructure\ETicaret.Persistence\ETicaret.Persistence.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
   </ItemGroup>
 
 </Project>
